--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,28 @@
 <h1>Friends App</h1>
 
-<app-friends (onFriend)="process($event)" [friend]="selectedFriend">
-    <!-- to use the following button, must have <ng-content> in friend component -->
-    <button type="submit">Add</button>
-    <button type="button" (click)="unFriend()">Delete</button>
+<!-- using property binding -->
+<app-friends (onFriend)="process($event)" [friend]="selectedFriend" [readOnly]="updateMode" [onUnFriend]="unfriendEvent"> 
+
+<!-- using view child -->
+<!-- <app-friends (onFriend)="process($event)"> -->
+
+    <div *ngIf="updateMode; else add">
+        <!-- to use the following button, must have <ng-content> in friend component -->
+        <button type="button" (click)="clear()">Clear</button>
+        <button type="submit">Update</button>
+        <button type="button" (click)="unFriend()">Delete</button>
+    
+    </div>
 </app-friends>
 
 <hr>
 
-<!-- <app-friends-list [friendsList]="friends" (onSelectedFriend)="selection($event)"></app-friends-list> -->
+<app-friends-list [friendsList]="friends" (onSelectedFriend)="selection($event)"></app-friends-list>
 
-<!-- subscribing to onSelectedFriend in ts using @ViewChild so no need (onSelectedFriend)-->
-<app-friends-list [friendsList]="friends"></app-friends-list>
+<!-- using view child -->
+<!-- subscribing to onSelectedFriend in ts using @ViewChild so no need (onSelectedFriend) -->
+<!-- <app-friends-list [friendsList]="friends"></app-friends-list> -->
+
+<ng-template #add>
+    <button type="submit">Add</button>
+  </ng-template>
