--- a/src/app/components/friends.component.html
+++ b/src/app/components/friends.component.html
@@ -6,7 +6,7 @@
         <tr>
             <td>Name:</td>
             <td>
-                <input type="text" size="30" id="" formControlName="name">
+                <input type="text" size="30" id="" formControlName="name" [readOnly]="readOnly">
             </td>
         </tr>
         <tr>
